# agentic-framework

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  RELEASING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentic-framework/: pyproject.toml
agentic-framework/config/: audio_transcription.yaml.example  whatsapp.yaml.example
agentic-framework/src/agentic_framework/: cli.py  constants.py
agentic-framework/src/agentic_framework/channels/: __init__.py  base.py  whatsapp.py  whatsapp_config.py
agentic-framework/src/agentic_framework/core/: whatsapp_agent.py
agentic-framework/src/agentic_framework/mcp/: config.py
agentic-framework/src/agentic_framework/services/: audio_transcriber.py
agentic-framework/tests/: test_audio_transcriber.py  test_channels_base.py  test_cli.py  test_constants.py  test_whatsapp_agent.py  test_whatsapp_channel.py
docs/: agents.md  audio-transcriber.md  llm-providers.md  mcp-servers.md  tools.md
scripts/: test_mcp_connectivity.py
