[project]
name = "agntrick"
version = "0.2.2"
description = "Agntrick: An agentic framework for building AI-powered applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.15"
authors = [
    { name = "jeancsil", email = "me@jeancsil.com" }
]
keywords = [
    "ai",
    "agents",
    "llm",
    "langchain",
    "langgraph",
    "mcp",
    "model-context-protocol",
    "framework",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "neonize",
    "httpx>=0.28.0",
    "dotenv>=0.9.9",
    "pyyaml>=6.0",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.10",
    "langchain-anthropic>=1.0.3",
    "langchain-model-profiles>=0.0.4",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "mcp>=1.21.1",
    "langchain-mcp-adapters>=0.1.13",
    "langgraph>=1.0.3",
    "langgraph-cli>=0.4.9",
    "langgraph-api>=0.5.37",
    "langchain-google-vertexai>=3.0.3",
    "langchain-google-genai>=3.1.0",
    "langsmith>=0.4.43",
    "langchain-core>=1.1.3",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.2",
    "requests>=2.32.5",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.1",
    "langchain-cohere>=0.5.0",
    "langchain-aws>=1.3.1",
    "langchain-huggingface>=1.2.0",
    "pydantic>=2.12.5",
    "ffmpeg-python>=0.2.0",
    "langchain-ollama>=1.0.1",
    "youtube-transcript-api>=1.2.4",
]

[project.urls]
Homepage = "https://github.com/jeancsil/agntrick"
Documentation = "https://github.com/jeancsil/agntrick#readme"
Repository = "https://github.com/jeancsil/agntrick.git"
Issues = "https://github.com/jeancsil/agntrick/issues"
Changelog = "https://github.com/jeancsil/agntrick/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-requests>=2.32.4.20260107",
]

[project.scripts]
agntrick = "agntrick.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-requests>=2.32.4.20260107",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src/agntrick"]

[tool.coverage.report]
fail_under = 60

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
